<?xml version="1.0"?>
<package>
  <name>jackal_velodyne</name>
  <version>1.0.0</version>
  <description>Jackal-Velodyne-Simulator</description>

  <maintainer email="tshan3@stevens.edu">Tixiao Shan</maintainer>

  <license>TODO</license>

  <author >Tixiao Shan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <build_depend>ros_bridge</build_depend>
  <run_depend>ros_bridge</run_depend>
  
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

</package>
